# pyhistory

./: .coveragerc  .gitignore  .isort.cfg  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml
docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
history/: 09be390  1405434763.61-3f2d0bc  1406036695.02-ffb74ce  1407329368-cf2e180  1413021257750-072cd1e  1413531802140-29d0bcc  1436472948714-15b82f7  1437949132700-9b485d9  1437977912851-a5b401e  1437978034006-0fb7f24  1438376362881610-4cfab91  1438720649937033-4a3f0c6  1442781206524513-3f7dbc0  1506670745716863-6e3baf7  1506670761657467-3c26bf3  1649086746165-1e5f1a7  1649086821964-d8cc588  1755454419162294-7d0df75  1755454447102396-b0d5eb7  1756565547268613-747108f  1756638505537015-8dcda17  43f1a88  ccc5925
pyhistory/: __init__.py  cli.py  cli_commands.py  exceptions.py  file_config.py  pyhistory.py  utilities.py
src/: .coveragerc
src/pyhistory/: __init__.py  cli.py  exceptions.py  file_config.py  pyhistory.py  utilities.py
src/tests/: __init__.py  test_cli.py  test_file_config.py  test_pyhistory.py  test_pyhistory_md.py  test_pyhistory_rst.py  test_utilities.py
src/tests/fixtures/: empty_after.md  empty_after.rst  history.md  history_after.md  history_after.rst  (+10 more)
tests/: __init__.py  test_cli.py  test_file_config.py  test_pyhistory.py  test_utilities.py
tests/fixtures/: history.rst  history1_after.rst  history1_at_line_after2.rst  history1_update_long_line.rst  setup.cfg
